# formseal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VENDOR.md  package.json  pyproject.toml  wrangler.toml.example
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  question.yml
.github/workflows/: npm-publish.yml  publish.yml  releases.yml  update-socket-badge.yml
basic/form/: form-script.js  form.hml
basic/worker/: worker.js  wrangler.toml
cli/: fse.py  logo.py  shim.js
cli/commands/: about.py  configure.py  doctor.py  help.py  init.py  update.py  version.py
cli/ui/: __init__.py  bodies.py  headers.py  output.py  styles.py
docs/: 00-quickstart.md  01-deployment.md  README.md  getting-started.md  troubleshooting.md
docs/concepts/: how-it-works.md  security.md
docs/deployment/: decryption.md  endpoint.md  versioning.md
docs/design/: overview.md  pipeline-flow.md
docs/integration/: fields.md  html.md  javascript.md
docs/reference/: apis.md  commands.md  payload-schema.md
docs/security/: cryptography.md  frontend-trust.md  threat-model.md
enhanced/form/: form-script.js
enhanced/worker/: worker.js  wrangler.toml
frontend/js/: config.js  crypto.js  form.js  payload.js  pow.js
frontend/sample-html/: index.html  loader.css  pages.css
pro/form/: form-script.js  form.html
pro/worker/: worker.js  wrangler.toml
sample/: index.html
src/: globals.js
src/_function/: fs.crypto.js  (+3 more)
tools/: index.html
(+22 files in other folders)
